# posts-raytracer

./: .gitignore  build.sh  frontmatter.json  init.sh  package.json  tsconfig.compile.json  tsconfig.json
.frontmatter/database/: mediaDb.json
src/embed/: .gitignore  camera.h  f3.c  f3.h  f3x3.c  f3x3.h  material.h  model.h  orthogonal_camera.c  perspective_camera.c  ray.h  util.c  util.h  write_image.c  write_image.h
src/embed/2024-06-16-the-raytracer-project-start/0/: CMakeLists.txt  build.sh  main.c
src/embed/2024-06-16-the-raytracer-project-start/1/: CMakeLists.txt  main.c
src/embed/2024-06-16-the-raytracer-project-start/2/: CMakeLists.txt  build.sh  main.c
src/embed/2024-06-17-the-raytracer-project-camera/0/: CMakeLists.txt  build.sh  main.c
src/embed/2024-06-17-the-raytracer-project-camera/1/: CMakeLists.txt  build.sh  main.c
src/embed/2024-06-17-the-raytracer-project-camera/2/: CMakeLists.txt  build.sh  main.c
src/embed/2024-06-17-the-raytracer-project-camera/3/: build.sh  main.c
src/embed/2024-06-17-the-raytracer-project-camera/5/: CMakeLists.txt  build.sh  main.c
src/embed/common/: build.sh
src/posts/2024-06-16-the-raytracer-project-start/: .gitignore  README.mdx  build.sh
src/posts/2024-06-17-the-raytracer-project-camera/: .gitignore  README.mdx  build.sh
src/posts/2024-06-24-the-raytracer-project-mathematical-background/: README.mdx
src/scripts/: length.ts  mul1.ts  spheresOption.tsx
src/scripts/raytracer/: Direction.ts  Ray.ts  Sphere.ts  add.ts  normalize.ts  sphereCollide.ts  sqr.ts  sub.ts
(+6 files in other folders)
